--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,47 @@
-body {
+html, body {
+    height: 100%;
+}
+body p, label{
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.main {
+    border-bottom: 2px solid black; 
+    height: 100%;
+    padding-bottom: 5px;
+    margin-bottom:5px;
+}
+
+.phone-input {
+    width: 250px;
+    display: block;
+}
+
+button[type="button"] {
+    margin-top: 8px;
+    margin-bottom: 5px;
+    display: block
+}
+
+input[type="radio"] {
+    margin-right: 5px;
+}
+
+.phones {
+  overflow-y: scroll;
+  max-height: 800px;
+  width: auto;
+}
+
+.numbers-container {
+  display: grid;
+  grid-template-rows: repeat(25, 35px);
+  grid-auto-flow: column;
+  grid-auto-columns: 150px;
+
 }
